--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/analytics": "^0.1.6",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
+    "next-mdx-remote": "^4.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
