--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "12.0.7",
     "next-mdx-remote": "^4.4.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "rehype-code-titles": "^1.2.0",
+    "rehype-prism-plus": "^1.5.1"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
