--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/react": "^2.2.1",
     "@next/mdx": "^13.1.1",
     "@vercel/analytics": "^0.1.6",
+    "axios": "^1.4.0",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
     "next-mdx-remote": "^4.4.1",
