--- a/package.json
+++ b/package.json
@@ -14,21 +14,22 @@
     "@vercel/analytics": "^0.1.6",
     "axios": "^1.4.0",
     "gray-matter": "^4.0.3",
-    "next": "12.0.7",
     "next-mdx-remote": "^4.4.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
     "rehype-code-titles": "^1.2.0",
-    "rehype-prism-plus": "^1.5.1"
+    "rehype-prism-plus": "^1.5.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "13.5.4"
   },
   "devDependencies": {
-    "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.2",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.13",
-    "typescript": "4.5.4"
+    "tailwindcss": "^3.0.13"
   }
 }
