--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
     "@mdx-js/loader": "^2.2.1",
     "@mdx-js/react": "^2.2.1",
     "@next/mdx": "^13.1.1",
-    "@vercel/analytics": "^0.1.6",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.4.0",
     "gray-matter": "^4.0.3",
+    "next": "13.5.4",
     "next-mdx-remote": "^4.4.1",
-    "rehype-code-titles": "^1.2.0",
-    "rehype-prism-plus": "^1.5.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "rehype-code-titles": "^1.2.0",
+    "rehype-prism-plus": "^1.5.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -30,6 +29,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.13"
+    "tailwindcss": "^3.0.13",
+    "typescript": "^5"
   }
 }
