--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "rehype-code-titles": "^1.2.0",
-    "rehype-prism-plus": "^1.5.1"
+    "rehype-pretty-code": "^0.10.2",
+    "rehype-prism-plus": "^1.5.1",
+    "shiki": "^0.14.5"
   },
   "devDependencies": {
     "@types/node": "^20",
