--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@next/mdx": "^13.1.1",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.4.0",
-    "gray-matter": "^4.0.3",
+    "contentlayer": "^0.3.4",
     "next": "13.5.4",
-    "next-mdx-remote": "^4.4.1",
+    "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
     "rehype-pretty-code": "^0.10.2",
     "rehype-prism-plus": "^1.5.1",
+    "sharp": "^0.32.6",
     "shiki": "^0.14.5"
   },
   "devDependencies": {
