--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.4.0",
     "contentlayer": "^0.3.4",
-    "next": "13.5.4",
+    "next": "^14.0.3",
     "next-contentlayer": "^0.3.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rehype-pretty-code": "^0.10.2",
     "rehype-prism-plus": "^1.5.1",
     "sharp": "^0.32.6",
@@ -25,11 +25,11 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.16",
     "autoprefixer": "^10.4.2",
     "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
+    "eslint-config-next": "^14.0.3",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.13",
     "typescript": "^5"
